src/test/resources/de/cd4analysis/cocos/invalid/U0530.cd
package de.cd4analysis.cocos;

classdiagram U0530 {
  interface i;
  class c;
  enum e;
}